--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oracle-idcs-rest-node-sdk",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Oracle IDCS RESTful API Node.js SDK",
   "main": "index.js",
   "scripts": {
@@ -23,12 +23,13 @@
   },
   "homepage": "https://github.com/kenspirit/oracle-idcs-rest-node-sdk",
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "request": "^2.87.0"
+    "bluebird": "^3.7.2",
+    "requestretry": "^7.0.2"
   }
 }
